--- a/WaCollaborative/WaCollaborative.Backend/appsettings.json
+++ b/WaCollaborative/WaCollaborative.Backend/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "WaCollaborative": "Data Source=WIN10;Initial Catalog=WaCollaborative;Persist Security Info=True;User ID=sa;Password=programador;Pooling=False; Encrypt=False"
-    }
+  "ConnectionStrings": {
+    "WaCollaborative": "Data Source=WA-WALTER-MORAL\\SQLEXPRESS;Initial Catalog=WaCollaborative;Persist Security Info=True;User ID=sa;Password=Wmorales123*;Pooling=False; Encrypt=False"
+  }
 }
