API consumption of countries

--- a/WaCollaborative/WaCollaborative.Backend/appsettings.json
+++ b/WaCollaborative/WaCollaborative.Backend/appsettings.json
@@ -1,12 +1,17 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "WaCollaborative": "Data Source=WIN10;Initial Catalog=WaCollaborative;Persist Security Info=True;User ID=sa;Password=programador;Pooling=False; Encrypt=False"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "CoutriesAPI": {
+    "urlBase": "https://api.countrystatecity.in",
+    "tokenName": "X-CSCAPI-KEY",
+    "tokenValue": "Q3lDc28wbGdNNzJIR2plTFptVk1FRG5ET2FrVmJ1UTJYbFNjOUJDaw=="
+  },
+  "ConnectionStrings": {
+    "WaCollaborative": "Data Source=WA-WALTER-MORAL\\SQLEXPRESS;Initial Catalog=WaCollaborative;Persist Security Info=True;User ID=sa;Password=Wmorales123*;Pooling=False; Encrypt=False"
+  }
 }
