--- a/WaCollaborative/WaCollaborative.Backend/appsettings.json
+++ b/WaCollaborative/WaCollaborative.Backend/appsettings.json
@@ -13,5 +13,6 @@
   },
   "ConnectionStrings": {
     "WaCollaborative": "Data Source=WA-WALTER-MORAL\\SQLEXPRESS;Initial Catalog=WaCollaborative;Persist Security Info=True;User ID=sa;Password=Wmorales123*;Pooling=False; Encrypt=False"
-  }
+  },
+  "jwtKey": "asñkdjfldsfanjfdfjasnb#gbdHJBFDW!kKN$!!CMLAasdfkdjncsauixzsffdasdfsdafasdfasfd545dafsad3d5f1sdaf5"
 }
