progress from export to excel

--- a/WaCollaborative/WaCollaborative.Frontend/WaCollaborative.Frontend.csproj
+++ b/WaCollaborative/WaCollaborative.Frontend/WaCollaborative.Frontend.csproj
@@ -7,8 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="bin\**" />
+    <Content Remove="bin\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <None Remove="bin\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazored.Modal" Version="7.1.0" />
+    <PackageReference Include="ClosedXML" Version="0.104.0-preview2" />
     <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.5.0" />
+    <PackageReference Include="EPPlus" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="7.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" PrivateAssets="all" />
@@ -21,7 +30,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Exports\" />
+    <Folder Include="wwwroot\ExcelOutput\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\Downloads\" />
+	  <None Update="wwwroot\ExcelOutput\**\*">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
   </ItemGroup>
 
 </Project>
