--- a/WaCollaborative/WaCollaborative.Backend/WaCollaborative.Backend.csproj
+++ b/WaCollaborative/WaCollaborative.Backend/WaCollaborative.Backend.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
+    <PackageReference Include="EPPlus" Version="7.0.1" />
     <PackageReference Include="MailKit" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.11" />
@@ -26,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="Images\users\" />
+    <Folder Include="ExcelFiles\" />
   </ItemGroup>
 
 </Project>
